[package]
name = "rust-todo-server"
version = "0.1.0"
authors = ["Jacques Ikot <jacquesikot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rusqlite = {version = "0.24.2", features = ["bundled"]}